<resources>
    <string name="app_name">Show</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id" translatable="false">448548218982781</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb448548218982781</string>
    <string name="home">Home</string>
    <string name="zsc">ZSC</string>
    <string name="create">Create</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="tip_double_click_exit">Press again to exit!</string>
    <string name="moment">Moment</string>
    <string name="video">Video</string>
    <string name="live">Live</string>
    <string name="start">Start</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="no_wx_install">You do not have WeChat installed.</string>
    <string name="wx_login_cancel">WeChat Login Cancelled</string>
    <string name="wx_login_reject">WeChat Login rejected</string>
    <string name="mobile_number_prompt">Mobile Number:</string>
    <string name="plus_65">+65</string>
    <string name="password_prompt">Password:</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="other_login">Or Login With</string>
    <string name="mobile_hint">Your mobile number</string>
    <string name="password_hint">Your password</string>
    <string name="mobile_registration">Mobile Registration</string>
    <string name="cancel">Cancel</string>
    <string name="verification_2fa">2FA Verification</string>
    <string name="verify_code">4 digital code:</string>
    <string name="verify_hint">Verify code</string>
    <string name="verify_count_down">Verify(%1$s)</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="login_cancel">Login Cancelled!</string>
    <string name="my_moment">Moments</string>
    <string name="my_favorite">Favorites</string>
    <string name="my_video">Videos</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="whatsup">Whats up</string>
    <string name="region">Region</string>
    <string name="hobby">Hobby</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="edit_cover">Edit Cover</string>
    <string name="edit">Edit</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="post">Post</string>
    <string name="nameinput">Enter your name</string>
    <string name="hobby_input">Enter your hobbies</string>
    <string name="nicknameinput">Enter your nickname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="whatsupinput">Say something about your mood?</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="coins">Coins</string>
    <string name="try_again">Try Again later!</string>
    <string name="delete">Delete</string>
    <string name="empty">Content not found!</string>
    <string name="loading">Loading Now...</string>
    <string name="format_error">Format Error !</string>
    <string name="useless_network">Network is not available!</string>
    <string name="request_fail">The request fails!</string>
    <string name="weak_network">Current network is weak!</string>
    <string name="choose_your_content">Choose your content</string>
    <string name="post_a_text">Post A Text</string>
    <string name="post_pictures">Post Pictures</string>
    <string name="post_a_video">Post A Video</string>
    <string name="friends">Friends</string>
    <string name="post_video_content_hint">What are you going to say</string>
    <string name="place">Place</string>
    <string name="who_can_view_my_video">Who can view my video</string>
    <string name="permission_public">Public</string>
    <string name="permission">Permission</string>
    <string name="permissioin_friend">Friend</string>
    <string name="permissioin_follower">Follower</string>
    <string name="permission_private">Private</string>
    <string name="choose_place">Choose Place</string>
    <string name="next">Next</string>
    <string name="comment_video">Say something about it..</string>
    <string name="send_comment">SEND</string>
    <string name="reply_to">Reply to</string>
    <string name="video_reply1"><Data><![CDATA[<font color="#03ABE3">@%1$s</font>：%2$s]]></Data></string>
    <string name="moment_reply1"><Data><![CDATA[<font color="#03ABE3">%1$s</font>：%2$s]]></Data></string>
    <string name="moment_reply2"><Data><![CDATA[<font color="#03ABE3">%1$s</font>回复<font color="#03ABE3">%2$s</font>：%3$s]]></Data></string>
    <string name="login_first">Please login first</string>
    <string name="recharge">Topup</string>
    <string name="send">Send</string>
    <string name="follow">Follow</string>
    <string name="un_follow">Unfollow</string>
    <string name="my_friend">Friends</string>
    <string name="music">Music</string>
    <string name="beauty">Beauty</string>
    <string name="flip">Flip</string>
    <string name="post_video">Post Video</string>
    <string name="hot">HOT</string>
    <string name="settings">Settings</string>
    <string name="google_maps_key">AIzaSyCYmhhrugJPiHFGya0ueF3jLsCDeMGXdBE</string>
    <string name="comments">Comments</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>

    <!-- Region -->
    <string name="country_china">China</string>
    <string name="country_malaysia">Malaysia</string>
    <string name="country_singapore">Singapore</string>

    <!-- Broadcast -->
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="publishing">Start publishing!</string>
    <string name="broadcasting">Broadcasting!</string>

    <!-- Chat -->
    <string name="voice">Voice</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="message_empty">Message cannot be empty.</string>
    <string name="hold_record_voice">Hold to Record</string>
    <string name="voice_rec">Slippery finger to cancel</string>
    <string name="voice_cancel">Release finger to cancel</string>
    <string name="voice_short">Time is too short</string>
    <string name="voice_failure">Recording failed</string>
    <string name="audio_permission_error">You haven\'t enabled Audio Access Permission for Show, Please enable it in the setting of your Phone</string>
    <string name="message_coming">New Message Coming</string>
    <string name="me">:Me</string>
    <string name="admin">Admin</string>

    <!-- Permission -->
    <string name="permission_storage">If not allowed, you will not take photos, videos and sending voice messages</string>
    <string name="permission_contact">Show will upload your address book to its server to help you find out which mobile contacts are using Show. Your uploaded data is only used for matching contacts and won\'t be saved for other purposes.</string>
    <string name="permission_video_audio">If not allowed, you will not take photos for your profile and record videos.</string>

    <!-- Error -->
    <string name="file_not_exist">File Path doesn\'t exist.</string>
    <string name="login_failed">Login failed.</string>


    <string name="url_thumbnails">https://bitdash-a.akamaihd.net/content/MI201109210084_1/thumbnails/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.jpg</string>
</resources>





















