<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDarkPink"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/forget_password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number_prompt"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:background="@drawable/white_round_corner_bg">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="12dp"
            android:text="@string/plus_65"
            android:paddingBottom="12dp"/>

        <EditText
            android:id="@+id/mobile_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_round_corner_bg"
            android:inputType="number"
            android:hint="@string/mobile_hint"
            android:paddingTop="12dp"
            android:paddingRight="8dp"
            android:paddingBottom="12dp"
            android:textColor="@color/colorBlack"
            android:textCursorDrawable="@null"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_code"
        android:layout_marginTop="20dp"
        android:textSize="12sp"
        android:textColor="@color/colorWhite"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_gravity="center_vertical">
        <EditText
            android:id="@+id/verify_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/verify_hint"
            android:textCursorDrawable="@null"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:background="@drawable/white_round_corner_bg"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/send_sms_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="12dp"
                android:paddingRight="8dp"
                android:paddingBottom="12dp"
                android:text="@string/send"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <com.rey.material.widget.ProgressView
                android:id="@+id/send_pv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                app:v_styleId="@array/pv_circular"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/white_round_corner_bg"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp">
            <Button
                android:id="@+id/verify_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify"
                android:textColor="@color/colorWhite"
                android:background="@drawable/green_round_corner_bg"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>