<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/shape_dialog_item_white_round_corner_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/post_a_text" />

        <View
            android:id="@+id/separator_1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tv_pictures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/post_pictures" />

        <View
            android:id="@+id/separator_2"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tv_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/post_a_video" />

        <View
            android:id="@+id/separator_3"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tv_live"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/start_live" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/shape_dialog_item_white_round_corner_bg"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_choose" />
</android.support.constraint.ConstraintLayout>