<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDarkPink"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/new_password"/>

    <EditText
        android:id="@+id/new_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:layout_marginTop="20dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:background="@drawable/bg_white_round_corner"/>

    <EditText
        android:id="@+id/confirm_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:layout_marginTop="20dp"
        android:textCursorDrawable="@null"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:background="@drawable/bg_white_round_corner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/bg_white_round_corner"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp">
            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:background="@drawable/green_round_corner_bg"/>

            <com.rey.material.widget.ProgressView
                android:id="@+id/save_pv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                app:v_styleId="@array/pv_circular"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>