<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/appBackground"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/text_color_gray"
        android:textSize="@dimen/text_size_16sp" />

    <ImageView
        android:id="@+id/iv_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:scaleType="centerInside"
        android:src="@mipmap/previous_arrow"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_16sp" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/post"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/text_size_16sp" />

    <ImageView
        android:id="@+id/iv_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_alignParentEnd="true"
        android:scaleType="centerInside"
        android:src="@mipmap/upload"
        android:visibility="gone" />

    <com.rey.material.widget.ProgressView
        android:id="@+id/progress_bar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        app:v_styleId="@array/pv_circular"/>
</RelativeLayout>